[package]
name = "perf_events"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "MIT"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
libc = "0.2"
log = "0.4"
nix = "0.10"
strum = "0.9"
strum_macros = "0.9"

[dev-dependencies]
env_logger = "0.5"

[build-dependencies]
bindgen = "0.26"
