[package]
name = "perf_events"
version = "0.1.0"
authors = ["Adam Perry <adam.n.perry@gmail.com>"]
license = "MIT"

[dependencies]
bitflags = "1.0.3"
bytes = "0.4"
crossbeam-channel = "0.2"
enum_primitive = "0.1"
failure = "0.1"
failure_derive = "0.1"
libc = "0.2"
log = "0.4"
mmap = "0.1"
mio = "0.6"
nix = "0.10"
num = "0.2"
page_size = "0.4"
serde = "1"
serde_derive = "1"
strum = "0.9"
strum_macros = "0.9"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"

[dev-dependencies]
env_logger = "0.5"
pretty_assertions = "0.5"
rand = "0.5"

[build-dependencies]
bindgen = "0.37"
